FEATURE: add support to set environment variables for ShellCommand